[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "mkpkg"
description = "A package @Julian uses to create Python packages."
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["packaging", "templating"]
authors = [
  {email = "Julian+mkpkg@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  "click",
  "jinja2",
  "pip-tools",
  "sphinx",
]

[project.scripts]
mkpkg = "mkpkg._cli:main"

[project.urls]
Documentation = "https://mkpkg.readthedocs.io/"
Homepage = "https://github.com/Julian/mkpkg"
Issues = "https://github.com/Julian/mkpkg/issues/"
Funding = "https://github.com/sponsors/Julian"
Source = "https://github.com/Julian/mkpkg"

[tool.coverage.html]
show_contexts = true
skip_covered = false

[tool.coverage.run]
branch = true
source = ["mkpkg"]
dynamic_context = "test_function"

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "\\s*\\.\\.\\.\\s*",
]
show_missing = true
skip_covered = true

[tool.doc8]
ignore = [
    "D001",  # one sentence per line, so max length doesn't make sense
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
from_first = true
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 79
target-version = "py38"
select = ["B", "D", "D204", "E", "F", "Q", "RUF", "SIM", "UP", "W"]
ignore = [
  # Wat, type annotations for self and cls, why is this a thing?
  "ANN101",
  "ANN102",
  # Private annotations are fine to leave out.
  "ANN202",
  # raise SomeException(...) is fine.
  "B904",
  # It's fine to not have docstrings for magic methods.
  "D105",
  # This rule makes diffs uglier when expanding docstrings (and it's uglier)
  "D200",
  # No blank lines before docstrings.
  "D203",
  # Start docstrings on the second line.
  "D212",
  # This rule misses sassy docstrings ending with ! or ?.
  "D400",
  # Section headers should end with a colon not a newline
  "D406",
  # Underlines aren't needed
  "D407",
  # Plz spaces after section headers
  "D412",
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"docs/*" = ["ANN", "D"]
"mkpkg/tests/*" = ["ANN", "D", "RUF012"]
"noxfile.py" = ["ANN", "D100"]
